# CognitiveLoadManager

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_PYPI.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.hypothesis/examples/8f6d180e36567874/: 5ff09c8b7312dea1
.hypothesis/examples/ae1c7f25c3d5c271/: 8059539229e54126
.hypothesis/examples/eec290d0dfc68580/: 3434a0a4aade1d96
.hypothesis/examples/f300a0518b03e7fd/: d3ea69bed2443085
clm/: __init__.py  cognitive_load_manager.py  exceptions.py
clm/adapters/: __init__.py  langchain_adapter.py  loop_adapter.py  openai_adapter.py
clm/core/: __init__.py  action_dispatcher.py  chunking_engine.py  config.py  models.py  scorer.py  signal_collector.py
clm/storage/: __init__.py  sidecar_store.py
clm/utils/: __init__.py  auto_state.py  embeddings.py
examples/: basic_agent_loop.py  langchain_example.py  quickstart.py
tests/: __init__.py
tests/fixtures/: __init__.py  strategies.py
tests/integration/: __init__.py  test_end_to_end.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_action_dispatcher_counters.py  test_chunking_engine.py  test_cognitive_load_manager.py  test_config.py  test_models.py  test_scorer.py  test_sidecar_store.py
