[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clm-plugin"
version = "0.1.0"
description = "Cognitive Load Manager — real-time metacognitive middleware for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "llm", "cognitive", "memory", "langchain", "openai", "metacognition", "ai", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "hypothesis>=6.90.0", "pytest-cov"]
langchain = ["langchain>=0.1.0"]

[project.urls]
Homepage = "https://github.com/ragul-rofi/CognitiveLoadManager"
Documentation = "https://github.com/ragul-rofi/CognitiveLoadManager#readme"
Issues = "https://github.com/ragul-rofi/CognitiveLoadManager/issues"

[tool.hatch.build.targets.wheel]
packages = ["clm"]
